# webhooks-engine

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
docs/reference/: core.md  service.md
docs/runbooks/: deploy.md
docs/usage/: library.md  microservice.md  quickstart.md
libs/: _MODULE_AUTO.md  __init__.py
libs/shared/: _MODULE_AUTO.md  __init__.py  logging.py  time.py
tests/: conftest.py  test_smoke_e2e.py
webhook_engine/: _MODULE_AUTO.md  __init__.py  config.py  dispatcher.py  engine.py  enums.py  envelope.py  events.py  exceptions.py  fanout.py  fanout_installer.py  host_semaphores.py  http_sender.py  meta.py  policy.py  protocols.py  registry.py  signer.py  ssrf_guard.py  types.py  verify.py
webhook_engine/ingest/: _MODULE_AUTO.md  __init__.py  base.py  events.py  ingestor.py  memory.py  mongo.py  pg.py
webhook_engine/service/: _MODULE_AUTO.md  __init__.py  app.py  delivery_admin.py  deps.py  ingest_worker.py  pg_repos.py  schemas.py  settings.py  subscription_mongo.py  subscription_pg.py  subscription_store.py  worker.py
webhook_engine/service/routes/: _MODULE_AUTO.md  deliveries.py  emit.py  health.py  subscriptions.py
webhook_engine/stores/: _MODULE.md  _MODULE_AUTO.md  __init__.py  base.py  memory.py  mongo.py  pg.py  redis.py
