[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# setuptools is used (not hatchling) because we need package-dir remapping:
# the library lives in webhook-engine/ (hyphen — not importable) and must be
# exposed as libs.webhooks.* to match the existing import namespace.

[project]
name            = "webhook-engine"
version         = "0.1.0"
description     = "Durable, signed, per-tenant webhook delivery — library and standalone microservice"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
    "redis[asyncio]>=5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
pg    = ["asyncpg>=0.29", "sqlalchemy[asyncio]>=2.0"]
mongo = ["motor>=3.4"]
# Event-bus fan-out integration (define events as classes, emit on a bus). The
# core delivery service does not need it. asyncbus is a private zlexdev package:
#   pip install -e ".[bus]" --find-links <private-index>   # or install asyncbus first
bus   = ["asyncbus>=0.1"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "pytest-httpx>=0.30",
    "fakeredis>=2.20",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/zlexdev/webhooks-engine"
Changelog  = "https://github.com/zlexdev/webhooks-engine/blob/master/CHANGELOG.md"

[project.scripts]
webhook-engine = "webhook_engine.service.app:main"

# ── package layout ───────────────────────────────────────────────────────────
# Two top-level packages: webhook_engine/ (the library) and libs/ (the shared
# logging/time shims). Both are plain importable packages — no package-dir remap.

[tool.setuptools.packages.find]
where   = ["."]
include = ["webhook_engine*", "libs*"]

[tool.setuptools.package-data]
"webhook_engine" = ["py.typed"]

# ── tool configs ─────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "BLE"]
# B008: Depends()/Header() in defaults is the idiomatic FastAPI pattern.
ignore = ["ANN101", "ANN102", "B008"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = false

# asyncbus is an optional dependency (the `bus` extra). Let the type-checker
# pass whether or not it is installed — the bus modules degrade to Any without it.
[[tool.mypy.overrides]]
module                 = "asyncbus.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.coverage.run]
source = ["libs"]
branch = true
